# CSV-Batch-Editor

./: CMakeLists.txt  README.md  build.sh  csvmatrix.cpp  csvmatrix.h  csvmatrix_addcolumn.cpp  csvmatrix_copycolumn.cpp  csvmatrix_debug.cpp  csvmatrix_deletecolumn.cpp  csvmatrix_getcolumnindex.cpp  csvmatrix_readfromfile.cpp  csvmatrix_reorder.cpp  csvmatrix_setcolumn.cpp  csvmatrix_splitstring.cpp  csvmatrix_writetofile.cpp  csvmatrixelement.h  input-script-gideon-groupabletrialbalance.txt  input-script-gideon.txt  input-script.txt  main.cpp  mygetline.cpp  mygetline.h  run.sh  subdirlist copy.txt  subdirlist.txt  trialbalance.csv
